# grimoirelab-sigils

./: .gitignore  AUTHORS  CONTRIBUTING.md  NEWS  README.md  import_panels.sh  pyproject.toml  setup.py
cauldron/: about.json  github_backlog_domains.json  github_issues-domains.json  github_issues_timing-domains.json  github_pullrequests-domains.json  github_pullrequests_timing-domains.json
chaoss-gmd-cde/: git-index-pattern.json  github_issues-index-pattern.json  lines_of_code_changed.json  maintainer_response_to_merge_request_duration.json  pull_request_merge_duration.json
chaoss-gmd-code-dev/: pull_requests_merged.json
dashboards/: INDEXES.md  README.md  about.json  activity-projects.json  affiliations-organizations-projects.json  apache.json  askbot.json  bugzilla-organizations-projects.json  bugzilla_backlog-organizations-projects.json  config.json  confluence.json  data-status-projects.json  data-status.json  discourse.json  gerrit-backlog-organizations-projects.json  gerrit-backlog-organizations.json  gerrit-organizations-projects.json  gerrit-organizations.json  gerrit_backlog-organizations-projects.json  gerrit_delays-organizations.json  gerrit_timing-organizations.json  git-organizations-projects.json  git-organizations.json  git.json  git_demographics-organizations-projects.json  google-hits.json  irc.json  (+44 more)
dashboards-cauldron/: Git.json  GitGitHub.json  GitHub-Issues.json  git-domains-projects.json  github_backlog_domains.json  github_issues_timing-domains.json  github_pullrequests-domains.json  github_pullrequests_timing-domains.json  overview.json
(+1563 files in other folders)
